# gestalt_tutor_streamlit

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/.streamlit/: secrets.toml.example
src/app/: main.py  models.py
src/app/assets/ME118Lecture/me118_Lecture_01_06/: output.json
src/app/assets/ME118Lecture/me118_Lecture_01_08/: output.json
src/app/assets/ME118Lecture/me118_Lecture_01_13/: me118_Lecture_01_13.txt
src/app/assets/ME118Lecture/me118_Lecture_01_15/: me118_Lecture_01_15.md  output.json
src/app/assets/ME118Lecture/me118_Lecture_01_20/: output.json
src/app/assets/ME135Lecture/10-1-25/: output.json
src/app/assets/ME135Lecture/10-10-25/: 10-10-25.md  output.json
src/app/assets/ME135Lecture/10-13-25/: output.json
src/app/assets/ME135Lecture/10-17-25/: 10-17-25.md  review.json
src/app/assets/ME135Lecture/10-22-25/: 10-22-25.md
src/app/assets/ME135Lecture/10-27-25/: 10-27-25.md  review.json
src/app/assets/ME135Lecture/10-29-25/: 10-29-25.md  output.json  review.json
src/app/assets/ME135Lecture/10-3-25/: 10-3-25.md
src/app/assets/ME135Lecture/10-31-25/: 10-31-25.md
src/app/assets/ME135Lecture/10-6-25/: review.json
src/app/core/: __init__.py  client.py  config.py  session.py
src/app/services/: async_wrappers.py  llm_services.py
src/app/ui/: __init__.py  chat.py
src/gestalt_streamlit_template/core/: app_settings.py  config.py
src/gestalt_streamlit_template/services/: __init__.py  llm_services.py
src/gestalt_streamlit_template/ui/: layout.py  sources.py
(+79 files in other folders)
